tests/parser/tests/cases/should_fail/unclose_type_args/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:5
1 |   k<t := do_something();
  |       ^ here
  = note: Expected an operator. Consider adding either a '.', '=', or ';'.
